robot_ws/log/build_2026-04-03_10-21-05/my_servo_controller/stderr.log
  File "/home/rasp/humanoid_ros2/robot_ws/install/my_servo_controller/lib/python3.12/site-packages/my_servo_controller/topic_controller.py", line 91
    if(self.active_mode != -1 or ):
                                 ^
SyntaxError: invalid syntax

